--- a/style.css
+++ b/style.css
@@ -1,75 +1,65 @@
-*{
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+* {
+  color: white;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 
-.card{
-    width: 375px;
-    height: 667px;
-    margin: 0 auto;
-    padding: 0 55px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(360deg, #292E49 0%, #536976 100%);
+.card {
+  width: 375px;
+  height: 667px;
+  margin: 0 auto;
+  padding: 0 55px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(360deg, #292E49 0%, #536976 100%);
+}
+.card__caption {
+  width: 265px;
+  margin-bottom: 48px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+}
+.card__form {
+  width: 266px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 42px;
+}
+.card__input {
+  height: 48px;
+  width: 127px;
+  margin: 6px;
+  background: rgba(41, 46, 73, 0.2);
+  border: 1px solid #292E49;
+  border-radius: 8px;
+}
+.card__btn {
+  height: 48px;
+  width: 127px;
+  margin: 6px;
+  line-height: 21px;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 14px 30px;
+  background: rgba(41, 46, 73, 0.6);
+  border: 1px solid #292E49;
+  border-radius: 8px;
+}
+.card__result {
+  font-weight: 700;
+  font-size: 28px;
+  margin-bottom: 43px;
+}
+.card__statistic {
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
 }
 
-.header{
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-}
-
-.card__caption{
-    width: 265px;
-    margin-bottom: 48px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-}
-
-.card__form{
-    width: 266px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 42px;
-}
-
-.card__input{
-    height: 48px;
-    width: 127px;
-    margin: 6px;
-    background: rgba(41, 46, 73, 0.2);
-    border: 1px solid #292E49;
-    border-radius: 8px;
-}
-
-.card__btn{
-    height: 48px;
-    width: 127px;
-    margin: 6px;
-    line-height: 21px;
-    font-weight: 500;
-    font-size: 18px;
-    padding: 14px 30px;
-    background: rgba(41, 46, 73, 0.6);
-    border: 1px solid #292E49;
-    border-radius: 8px;
-}
-
-.card__result{
-    font-weight: 700;
-    font-size: 28px;
-    margin-bottom: 43px;
-}
-
-.card__statistic{
-    font-weight: 400;
-    font-size: 14px;
-    text-align: center;
-    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
-}
+/*# sourceMappingURL=style.css.map */
